--- a/L2_inversion/GRAV/Gravity_LpLq.ipynb
+++ b/L2_inversion/GRAV/Gravity_LpLq.ipynb
@@ -47,9 +47,6 @@
     "# Define no-data-value\n",
     "ndv = -100\n",
     "\n",
-    "# Define survey flight height\n",
-    "Z_bird = 5.\n",
-    "\n",
     "# Load topography file in UBC format and find the active cells\n",
     "# Import Topo\n",
     "model_dir = '../../../Geology_Surfaces/'\n",
@@ -74,6 +71,10 @@
     "prob = PF.Gravity.GravityIntegral(mesh, rhoMap=idenMap, actInd=actv)\n",
     "# Pair the survey and problem\n",
     "survey.pair(prob)\n",
+    "\n",
+    "# If you formed the sensitivity gravity matrix before, you can load it here\n",
+    "#G = np.load('../../../Forward/G_Grav_Inverse.npy')\n",
+    "#prob._G = G\n",
     "\n",
     "# Define noise level\n",
     "std = 0.01\n",
