--- a/PGI_joint_inversion/Joint_PGI_Grav_Mag.ipynb
+++ b/PGI_joint_inversion/Joint_PGI_Grav_Mag.ipynb
@@ -593,30 +593,20 @@
     "ax[0].set_aspect('equal')\n",
     "ax[0].set_title('Gravity Joint inversion', fontsize=1.25*fontsize*(4./3.))\n",
     "ax[0].set_xlabel('Easting (m)', fontsize=20)\n",
-    "ax[0].set_ylabel('Elevation (m)', fontsize=20)\n",
-    "#ax[0].tick_params(labelbottom=False)    \n",
-    "#ax[0].set_xlabel('')\n",
-    "#ax[0].tick_params(labelleft=False)    \n",
+    "ax[0].set_ylabel('Elevation (m)', fontsize=20)   \n",
     "getBlkOutline(geomodel,mesh_plot,indx,normal, ax[0])\n",
     "\n",
     "for i in range(len(ax)):\n",
     "        ax[i].set_xlim([-400,400])\n",
     "        ax[i].set_ylim([0.,450])\n",
     "        ax[i].tick_params(labelsize=18)\n",
-    "#ax1.set_xlim([-0.6,0.])\n",
-    "#ax1.set_ylim([0.,0.03])\n",
-    "#plt.tight_layout()\n",
-    "\n",
-    "#ax[-1].axis('off')\n",
-    "#ax[-1].set_axis_off()\n",
+    "        \n",
     "cbaxes_grav = fig.add_axes([0.2, 0, 0.62, 0.025]) \n",
     "cbargrav = fig.colorbar(gravplot[0],cbaxes_grav, orientation='horizontal', ticks=np.r_[-0.4,-0.3,-0.2,-0.1,0.])\n",
-    "#cbargrav.set_ticklabels([\"1e-5\",\"1e-4\",\"1e-3\",\"1e-2\",\"1e-1\"])\n",
     "cbargrav.ax.tick_params(labelsize=18)\n",
     "cbargrav.set_label(\"Density (g/cc)\",fontsize=1.2*fontsize*(4./3.))\n",
     "cbargrav.ax.xaxis.set_label_position('bottom')\n",
     "\n",
-    "#plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -677,27 +667,20 @@
     "ax[2].set_title('Magnetic Joint inversion', fontsize=1.25*fontsize*(4./3.))\n",
     "ax[2].set_xlabel('Easting (m)', fontsize=20)\n",
     "ax[2].set_ylabel('Elevation (m)', fontsize=20)\n",
-    "#ax[1].tick_params(labelbottom=False)  \n",
-    "#ax[2].set_ylabel('')\n",
     "getBlkOutline(geomodel,mesh_plot,indx,normal, ax[2])\n",
     "\n",
     "for i in range(len(ax)):\n",
     "        ax[i].set_xlim([-400,400])\n",
     "        ax[i].set_ylim([0.,450])\n",
     "        ax[i].tick_params(labelsize=18)\n",
-    "#ax1.set_xlim([-0.6,0.])\n",
-    "#ax1.set_ylim([0.,0.03])\n",
-    "#plt.tight_layout()\n",
     "\n",
-    "cbaxes_mag = fig.add_axes([.2, 0.0, 0.62, 0.025]) \n",
+    "        cbaxes_mag = fig.add_axes([.2, 0.0, 0.62, 0.025]) \n",
     "cbarmag = fig.colorbar(magplot[0],cbaxes_mag, orientation='horizontal', ticks=np.r_[0.,0.005,0.01,0.015,0.02])\n",
-    "#cbargrav.set_ticklabels([\"1e-5\",\"1e-4\",\"1e-3\",\"1e-2\",\"1e-1\"])\n",
     "cbarmag.ax.tick_params(labelsize=18)\n",
     "cbarmag.set_label(\"Mag Susceptibility (SI)\",fontsize=1.2*fontsize*(4./3.))\n",
     "cbarmag.ax.xaxis.set_label_position('bottom')\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.tight_layout()"
    ]
   },
   {
