--- a/PGI_individual_inversion/GRAV/OnlyHKsignature/Gravity_petro_only_HK.ipynb
+++ b/PGI_individual_inversion/GRAV/OnlyHKsignature/Gravity_petro_only_HK.ipynb
@@ -57,6 +57,11 @@
     "%matplotlib inline\n",
     "matplotlib.rcParams['font.size'] = 14\n",
     "import seaborn\n",
+    "import sys\n",
+    "sys.path.append('../../../')\n",
+    "from DO27_Utils import *\n",
+    "\n",
+    "# Nicer plot\n",
     "seaborn.set()\n",
     "# Reproducible Science\n",
     "np.random.seed(518936)\n",
