--- a/PGI_individual_inversion/MAG/OnlyHKsignature/Magnetic_Petro_Only_HK.ipynb
+++ b/PGI_individual_inversion/MAG/OnlyHKsignature/Magnetic_Petro_Only_HK.ipynb
@@ -49,6 +49,10 @@
     "import numpy as np\n",
     "import copy\n",
     "from pymatsolver import PardisoSolver\n",
+    "import seaborn\n",
+    "import sys\n",
+    "sys.path.append('../../../')\n",
+    "from DO27_Utils import *\n",
     "\n",
     "matplotlib.rcParams['font.size'] = 14\n",
     "%matplotlib inline\n",
@@ -79,7 +83,7 @@
     "print(\"Active cells created from topography!\")\n",
     "\n",
     "# Load data\n",
-    "survey = io_utils.readUBCgravityObservations(\n",
+    "survey, _ = io_utils.readUBCmagneticsObservations(\n",
     "    \"../../../Forward/MAG_noisydata.obs\"\n",
     ")\n",
     "\n",
