--- a/L2_inversion/MAG/magnetics_LpLq.ipynb
+++ b/L2_inversion/MAG/magnetics_LpLq.ipynb
@@ -244,18 +244,16 @@
     ")\n",
     "invProb = InvProblem.BaseInvProblem(dmis, reg, opt)\n",
     "\n",
-    "Alphas = Directives.AlphasSmoothEstimate_ByEig(\n",
-    "    alpha0_ratio= 1.,\n",
-    "    ninit=10, verbose=True\n",
-    ")\n",
-    "\n",
+    "# Beta Schedule\n",
     "betaest = Directives.BetaEstimate_ByEig(beta0_ratio=1., ninit=10)\n",
+    "\n",
+    "# Sparse regularization\n",
     "IRLS = Directives.Update_IRLS(\n",
     "    f_min_change=1e-3, maxIRLSiter=50,\n",
     "    #minGNiter=1,\n",
     "    betaSearch = False\n",
     ")\n",
-    "# Isssue with Depth weighting, being currently investigated\n",
+    "# Pre-conditioner\n",
     "update_Jacobi = Directives.UpdatePreconditioner()\n",
     "\n",
     "inv = Inversion.BaseInversion(\n",
