--- a/PGI_individual_inversion/GRAV/OnlyHKsignature/Gravity_petro_only_HK.ipynb
+++ b/PGI_individual_inversion/GRAV/OnlyHKsignature/Gravity_petro_only_HK.ipynb
@@ -31,11 +31,11 @@
     "Script of petro-inversion of gravity over TKC\n",
     "\n",
     "Notes:\n",
-    "This version of the script uses data with less noises\n",
-    "but still invert with a higher assumed noise level.\n",
-    "This is equivalent to increase the chi-factor.\n",
+    "This version of the script uses data with less noise\n",
+    "but we still invert with a higher assumed noise level.\n",
+    "This is equivalent to increasing the chi-factor.\n",
     "This has been needed in order to fit both geophysical\n",
-    "and petrophysical data set.\n",
+    "and petrophysical data sets.\n",
     "\"\"\"\n",
     "\n",
     "# Script of petro-inversion of gravity over TKC\n",
@@ -97,7 +97,7 @@
     "\n",
     "# Now that we have a survey we can build the linear system ...\n",
     "nactv = np.int(np.sum(actv))\n",
-    "# Creat reduced identity map\n",
+    "# Create reduced identity map\n",
     "idenMap = Maps.IdentityMap(nP=nactv)\n",
     "# Create the forward model operator\n",
     "prob = PF.Gravity.GravityIntegral(mesh, rhoMap=idenMap, actInd=actv)\n",
@@ -118,7 +118,7 @@
     "\n",
     "# Petro Inversion\n",
     "\n",
-    "# It is potential fields, so we will need to push the inverison down\n",
+    "# It is potential fields, so we will need to push the inversion down\n",
     "# Create distance weights from our linera forward operator\n",
     "# rxLoc = survey.srcField.rxList[0].locs\n",
     "# wr = PF.Magnetics.get_dist_wgt(mesh, rxLoc, actv, 3., np.min(mesh.hx)/4.)\n",
